# hunter

./: .env.hunter.example  .env_example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
app/: app.py  query.py
app/models/: models.py  relationship.py
data/: resumes.json
docs/: APIs.md  Model.md  SCHEMA.md  jobs.md
models/: __init__.py
src/: .env_example  app.py  main.py
src/hunter/: __main__.py
src/hunter/api/: __init__.py  app.py  schemas.py
src/hunter/api/routes/: candidates.py
src/hunter/config/: __init__.py  setting.py
src/hunter/db/: __init__.py  constraints.py  neodb.py
src/hunter/domains/: __init__.py  nodes.py  relationships.py  schema.py  types.py
src/hunter/repository/: candidate_repo.py  feature_repo.py  match_repo.py
src/hunter/services/: candidates.py
src/hunter/utils/: __init__.py  cypher_builder.py  helpers.py
test/: test_candidate_repo.py  test_cypher_builder.py  test_features.py  test_matching.py  test_relationship.py  test_schema_validation.py
